fixed spacing between emoji and send button

--- a/src/containers/Chat/ChatMessages/ChatInput/ChatInput.module.css
+++ b/src/containers/Chat/ChatMessages/ChatInput/ChatInput.module.css
@@ -18,9 +18,11 @@
 }
 
 .EmojiContainer {
+  margin-top: -6px;
 }
 
 .SendButtonContainer {
+  padding-left: 5px;
 }
 
 .InputBox {
@@ -32,8 +34,6 @@
   padding-right: 15px;
   font-size: 16px;
   outline: none;
-  box-shadow: 0 1px silver;
-  font-size: 18px;
   line-height: 35px;
 }
 
